
o  corrected bug constraining quick estimates in polychor() to 0,1 rather than -1,1.

o  constraints on correlations (default to -.9999,.9999) for numeric stability.

o  several small changes.

version 0.7-0

o  added tests of bivariate normality.

o  added as.matrix.hetcor().

o  fixed bug that caused use="pairwise.complete.obs" in hetcor() to fail.

o  cleaned up code.

version 0.7-1

o  suppressed test of bivariate normality in 2 x 2 (tetrachoric) case (where there are 0 df for the test).

o  examples, which use random data, now set the random-number-generator seed.

o  small changes to printed output.

version 0.7-2

o  polychor() and polyserial() now report an error when a categorical variable has just one level (problem pointed out by David Barron).

version 0.7-3

o  as.matrix.hetcor() now has a second argument, ..., to conform to the as.matrix() generic in R 2.5.0.

version 0.7-4

o  hetcor() uses the nearcor() function in sfsmisc to insure that the correlation matrix returned is positive-definite.

o  small changes.


version 0.7-5

o  polychor() and polyserial() now return NA and report a warning when a factor is invariant (after problem report by Jose Quesada); in polychor(), empty factor levels are automatically removed.

version 0.7-6

o  polyserial() and polychor() now make sure that final correlations are in the range [-1, 1], reporting a warning when inadmissible values are coerced to -1 or 1 (correcting a problem reported by Marie Loh).

version 0.7-7

o  hetcor() avoids an incorrect name for the first variable when it's given a matrix as input, rather than a data frame or individual variables, as the documentation indicates (preventing a consequent renaming error reported by Iuri Gavronski).

o  Small fix to hetcor.Rd.

version 0.7-8

o  hetcor() now accepts logical variables, treated as two-level factors (suggested by Soren Vogel).

version 0.7-9

o  Further protection/warnings against inadmissible correlations.
